welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:30: error: Unit does not take parameters
		gauche()() ; avance();gauche()
                        ^